# pulsar-relay

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  CHANGELOG.md  Dockerfile  IMPLEMENTATION_README.md  LICENSE  LONG_POLLING.md  MANIFEST.in  Makefile  PYTHON_QUICKSTART.md  PYTHON_STACK.md  QUICKSTART.md  README.md  SUMMARY.md  VALKEY_INTEGRATION.md  client.py  config.toml.example  config.yaml.example  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  tox.ini  valkey.conf
.claude/skills/cut-release/: SKILL.md
.github/workflows/: ci.yml  release-client.yml  release.yml
app/: __init__.py  config.py  main.py  models.py
app/api/: auth.py  health.py  messages.py  polling.py  topics.py  websocket.py
app/auth/: dependencies.py  jwt.py  models.py  storage.py  topic_storage.py
app/core/: cache.py  connections.py  polling.py  pubsub.py
app/storage/: base.py  memory.py  valkey.py
app/utils/: metrics.py
benchmarks/: __init__.py  run_benchmarks.py
client/: README.md  pyproject.toml
client/pulsar_relay_client/: __init__.py  _url.py  auth.py  credentials.py  device_flow.py  testing.py  topics.py  transport.py
client/tests/: test_auth.py  test_credentials.py  test_cursor_file_perms.py  test_idempotency.py  test_topics.py  test_transport.py  test_url_validation.py
docs/: CONFIGURATION.md  OIDC.md
local-dev/: Dockerfile  README.md  docker-compose.yml  smoke.sh
local-dev/keycloak/: pulsar-local-realm.json
pulsar_relay/: __init__.py  config.py  main.py  models.py
pulsar_relay/api/: auth.py  device.py  health.py  limits.py  messages.py  oidc.py  polling.py  topics.py  websocket.py
pulsar_relay/auth/: denylist.py  dependencies.py  device_flow.py  federation.py  jwt.py  models.py  oidc_client.py  oidc_state.py  refresh.py  storage.py  topic_storage.py
pulsar_relay/core/: cache.py  connections.py  idempotency.py  polling.py  pubsub.py
pulsar_relay/storage/: base.py  memory.py  valkey.py
tests/: _storage_helpers.py  conftest.py  test_api_messages.py  test_api_topics.py  test_api_topics_valkey.py  test_auth.py  test_auth_token_endpoints.py  test_config.py  test_config_loading.py  test_connection_manager.py  test_cors_and_trusted_host.py  test_device_flow.py  test_device_flow_xss.py  test_federation_collision.py  test_idempotency.py  test_jwt_denylist.py  test_long_poll_cleanup.py  test_memory_storage.py  test_models.py  test_oidc_login.py  test_phase4_hardening.py  test_polling.py  test_pubsub_multiworker.py  test_rate_limiting.py  test_refresh_token_race.py  test_refresh_tokens.py  test_route_order_admin_stats.py  test_sentry.py  test_startup_guard.py  test_topic_namespacing.py  test_topic_storage.py  test_valkey_integration.py  test_valkey_storage.py  test_valkey_user_integration.py  test_valkey_user_storage.py  test_websocket.py
tests/e2e/: README.md  conftest.py  docker-compose.yml  keycloak_bootstrap.py  keycloak_login_helper.py  test_byoc_e2e.py  test_oidc_e2e.py
